--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="./src/assets/website-icon.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fahim's Website</title>
+    <title>Fahim's Portfolio Website</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap"
       rel="stylesheet"
